--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
             theme: {
                 extend: {
                     colors: {
-                        clifford: '#da373d',
+                        'gradient-start': '#FF8938',
+                        'gradient-end': '#F00',
                     }
                 }
             }
@@ -35,19 +36,19 @@
 </head>
 
 <body class="font-manrope">
-    <header class="container mx-auto">
-        <div class="hero">
-            <div class="hero-content flex-col lg:flex-row">
+    <header class="container lg:max-w-screen-xl mx-auto">
+        <div class="my-20">
+            <div class="flex justify-between items-center flex-col lg:flex-row">
 
                 <div>
                     <h1 class="text-7xl font-extrabold">It's good<br>
                         tea time at The<br> Tea House</h1>
                     <p class="py-6">Tea and Botanical Solutions Supplier Give Optimum Satisfaction To Your Taste Buds.
                     </p>
-                    <button class="btn btn-primary">Explore More</button>
+                    <button class="btn bg-gradient-to-r from-[#FF8938] to-[#F00] text-white ">Explore More</button>
                 </div>
                 <div>
-                    <img src="images/banner.png" class="max-w-sm" />
+                    <img src="images/banner.png" class="" />
                     <!-- ratings badges -->
                     <div class="-mt-16 flex items-center gap-4 drop-shadow-lg bg-white p-5 w-60 rounded">
                         <i class="fa-solid fa-star text-3xl text-amber-400"></i>
@@ -60,7 +61,7 @@
             </div>
         </div>
     </header>
-    <main class="container mx-auto">
+    <main class="container lg:max-w-screen-xl mx-auto">
         <!-- featured section -->
         <section class="text-center my-24">
             <h2 class="text-5xl font-extrabold mb-5">Our Featured Products</h2>
@@ -144,7 +145,7 @@
                         have suffered alteration in some form, by injected humour, or randomised words which don't look
                         even
                         slightly believable. </p>
-                    <button class="btn btn-primary">Show All</button>
+                    <button class="btn bg-gradient-to-r from-[#FF8938] to-[#F00] text-white ">Show All</button>
                 </div>
             </div>
             <!-- review container -->
@@ -188,8 +189,53 @@
             </div>
         </section>
     </main>
-    <footer>
-
+    <footer class="lg:px-48 py-10 bg-base-200 text-base-content">
+        <div class="flex justify-between my-24">
+            <img src="images/cup.png" alt="">
+            <p>
+                <span>Ready to get strated?</span>
+                <button class="btn bg-gradient-to-r from-[#FF8938] to-[#F00] text-white ">Get Started</button>
+            </p>
+        </div>
+        <div class="footer">
+            <nav>
+                <header class="footer-title">Services</header>
+                <a class="link link-hover">Branding</a>
+                <a class="link link-hover">Design</a>
+                <a class="link link-hover">Marketing</a>
+                <a class="link link-hover">Advertisement</a>
+            </nav>
+            <nav>
+                <header class="footer-title">Company</header>
+                <a class="link link-hover">About us</a>
+                <a class="link link-hover">Contact</a>
+                <a class="link link-hover">Jobs</a>
+                <a class="link link-hover">Press kit</a>
+            </nav>
+            <nav>
+                <header class="footer-title">Legal</header>
+                <a class="link link-hover">Terms of use</a>
+                <a class="link link-hover">Privacy policy</a>
+                <a class="link link-hover">Cookie policy</a>
+            </nav>
+            <form>
+                <header class="footer-title">Newsletter</header>
+                <fieldset class="form-control w-80">
+                    <label class="label">
+                        <span class="label-text">Enter your email address</span>
+                    </label>
+                    <div class="join">
+                        <input type="text" placeholder="username@site.com"
+                            class="py-4 bg-transparent border-b-2 border-black outline-none" />
+                        <button class="btn bg-gradient-to-r from-[#FF8938] to-[#F00] text-white rounded-full"><i
+                                class="fa-solid fa-chevron-right"></i></button>
+                    </div>
+                </fieldset>
+        </div>
+        <div class="mt-10 text-center">
+            <p>Copyright © 2024 - All right reserved by ACME Industries Ltd</p>
+        </div>
+        </form>
     </footer>
 </body>
 
